--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # application.properties
 spring.profiles.active=development
+
+spring.h2.console.settings.web-allow-others=true
