--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,30 @@
 server.port=5000
-#spring.datasource.url= jdbc:mysql://localhost:3306/test
-#spring.datasource.username= root
-#spring.datasource.password= helloworld
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url= jdbc:mysql://localhost:3306/test
+spring.datasource.username= root
+spring.datasource.password= HelloWorld@1997
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
 #--------------AWS Database----------------
-#spring.datasource.url= jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12357206
+#spring.datasource.url= jdbc:sql12.freemysqlhosting.net:3306/sql12357206
 #spring.datasource.username= sql12357206
 #spring.datasource.password= uhpduBLmDU
 
-spring.h2.console.enabled=true
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:test
-
-
+#spring.h2.console.enabled=true
+#spring.datasource.platform=h2
+#spring.datasource.url=jdbc:h2:mem:test
 
 spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
-pg.app.jwtSecret= MySecretKey
-pg.app.jwtExpirationMs= 69006900
+utils.app.jwtSecret= MySecretKey
+utils.app.jwtExpirationMs= 69006900
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
 #CorsConfiguration class uses @Profile annotation to load its configuration only on a development environment. We will specify the active profile in the application.properties file:
 
 # application.properties
-spring.profiles.active=development
+#spring.profiles.active=development
 
 spring.h2.console.settings.web-allow-others=true
