--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=5000
 spring.datasource.url= jdbc:mysql://localhost:3306/test
 spring.datasource.username= root
-spring.datasource.password= HelloWorld@1997
+spring.datasource.password= helloworld
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
 #--------------AWS Database----------------
