--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ server.port=5000
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
 #--------------AWS Database----------------
-#spring.datasource.url= jdbc:sql12.freemysqlhosting.net:3306/sql12357206
-#spring.datasource.username= sql12357206
-#spring.datasource.password= uhpduBLmDU
+spring.datasource.url= jdbc:sql12.freemysqlhosting.net:3306/sql12357206
+spring.datasource.username= sql12357206
+spring.datasource.password= uhpduBLmDU
 
-spring.h2.console.enabled=true
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:test
+#spring.h2.console.enabled=true
+#spring.datasource.platform=h2
+#spring.datasource.url=jdbc:h2:mem:test
 
 spring.jpa.hibernate.ddl-auto= update
 
@@ -28,3 +28,5 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.profiles.active=development
 
 spring.h2.console.settings.web-allow-others=true
+spring.datasource.initialization-mode=always
+
