--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 server.port=5000
-#spring.datasource.url= jdbc:mysql://localhost:3306/test
-#spring.datasource.username= root
-#spring.datasource.password= helloworld
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url= jdbc:mysql://localhost:3306/test
+spring.datasource.username= root
+spring.datasource.password= helloworld
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 
 #--------------AWS Database----------------
 #spring.datasource.url= jdbc:sql12.freemysqlhosting.net:3306/sql12357206
 #spring.datasource.username= sql12357206
 #spring.datasource.password= uhpduBLmDU
 
-spring.h2.console.enabled=true
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:test
+#spring.h2.console.enabled=true
+#spring.datasource.platform=h2
+#spring.datasource.url=jdbc:h2:mem:test
 
 spring.jpa.hibernate.ddl-auto= update
 
